# supercat

./: ChangeLog  Makefile.am  configure.ac
doc/: Makefile.am  spc.1  spc.txt
spcrc/: Makefile.am  spcrc-ChangeLog  spcrc-access_log  spcrc-c  spcrc-emerge  spcrc-error_log  spcrc-gentooconfd  spcrc-patch  spcrc-py  spcrc-svn  spcrc-xorg
src/: Makefile.am  spc.c  spc.h
